# Filters

./: CMakeLists.txt  README.md  code-style.xml  main.cpp
AHRS/: AHRS.cpp  AHRS.h  CMakeLists.txt
estimators/: AttitudeEstimator.cpp  AttitudeEstimator.h  AttitudeEstimator.hpp  CMakeLists.txt
kalman/: CMakeLists.txt  EKF.cpp  EKF.h  EKF.hpp  Kalman.cpp  Kalman.h  Kalman.hpp  main.cpp
lib/: CMakeLists.txt  FixMath.cpp  FixMath.hpp  Matrix.cpp  Matrix.h  Matrix.hpp  allocator.hpp
lib/embedded/: CMakeLists.txt  Matrix.cpp  Matrix.h
lib/pc/: CMakeLists.txt  Matrix.cpp  Matrix.h
test/: CMakeLists.txt
test/Tester/: CMakeLists.txt
test/Tester/inc/: Matcher.hpp
test/Tester/src/: StatRecorder.cpp  TestSuite.cpp
test/tests/: fixed.test.cpp
